--- a/client/styles/main.scss
+++ b/client/styles/main.scss
@@ -1,1 +1,11 @@
 @import "{poetic:materialize-scss}/sass/materialize.scss";
+
+body {
+    display: flex;
+    min-height: 100vh;
+    flex-direction: column;
+}
+
+main {
+	flex: 1 0 auto;
+}
