Declared color variables

--- a/client/styles/main.scss
+++ b/client/styles/main.scss
@@ -9,3 +9,10 @@ body {
 main {
 	flex: 1 0 auto;
 }
+
+// color definitions
+$kaleid-main: #523D66;
+$kaleid-air: #E5CC50;
+$kaleid-fire: #E55050;
+$kaleid-earth: #5EA63A;
+$kaleid-water: #3AA6A6;
