--- a/client/styles/_characterBoard.scss
+++ b/client/styles/_characterBoard.scss
@@ -12,3 +12,19 @@
 	height: 200px;
 	margin-top: 50px;
 };
+
+
+.characterBoard--testButton {
+	background: #EF572E;
+	border-radius: 5px;
+	width: 280px;
+	height: 50px;
+	border: none;
+}
+
+.characterBoard--testButtonText {
+	font-family: AmericanTypewriter-Bold;
+	font-size: 14px;
+	color: #CCCCCC;
+	letter-spacing: 2.29px;
+}
