Cleaned up design assets

--- a/client/styles/_characterBoard.scss
+++ b/client/styles/_characterBoard.scss
@@ -1,6 +1,8 @@
 .characterBoard--avatar {
+	margin-top: 35px;
 	width: 320px;
 	height: 240px;
+	border-radius: 20px;
 }
 
 .characterBoard--editButton {
