Character board now ready for data fxnality

--- a/client/styles/_characterBoard.scss
+++ b/client/styles/_characterBoard.scss
@@ -42,7 +42,7 @@
 		width: 80%;
 		margin: 0 auto;
 		&:last-of-type {
-			margin-bottom: 20px;
+			margin-bottom: -20px;
 		}
 	}
 }
@@ -71,17 +71,13 @@
 	margin-bottom: 0;
 }
 
-.characterBoard--plateButton1 {
+.characterBoard--plateButton {
 	width: 25;
 	height: 25px;
 	cursor: pointer;
-	position: relative;
-	left: -40%;
-}
-
-.characterBoard--plateButton2 {
-	@extend .characterBoard--plateButton1;
-	left: 40%;
+	margin-bottom: -20px;
+	margin-top: -20px;
+	padding: 0;
 }
 
 .characterBoard--majorButton {
