Altered kaleidoscope in navbar

--- a/client/styles/_navbar.scss
+++ b/client/styles/_navbar.scss
@@ -3,8 +3,8 @@
 }
 
 .navbar--kaleidoscope {
-	width: 80px;
-	height: 80px;
-	background-color: $kaleid-main;
-	border-radius: 50%;
+	margin-top: 2px;
+	width: 60px;
+	height: 60px;
+	background-color: transparent;
 }
