Moved mustLogIn card styling to general--largeCard in main

--- a/client/styles/main.scss
+++ b/client/styles/main.scss
@@ -29,6 +29,23 @@ $kaleid-water: #3AA6A6;
 	color: $kaleid-water;
 }
 
+// custom button colors
+.waves-effect.waves-air {
+	background-color: #E7CE50;
+}
+
+.waves-effect.waves-fire {
+	background-color: #E55050;
+}
+
+.waves-effect.waves-earth {
+	background-color: #5EA739;
+}
+
+.waves-effect.waves-water {
+	background-color: #3CA6A7;
+}
+
 // materialize setup
 @import "{poetic:materialize-scss}/sass/components/_color.scss";
 
@@ -45,4 +62,10 @@ $link-color: $kaleid-main;
 @import "glossaryEntry";
 @import "navbar";
 @import "intro";
-@import "mustLogIn";
+
+// common stylings
+.general--largeCard {
+	background-color: $kaleid-main;
+	border-radius: 0 0 20px 20px;
+	margin-top: 0;
+}
