--- a/client/styles/main.scss
+++ b/client/styles/main.scss
@@ -10,6 +10,7 @@ main {
 
 // color definitions
 $kaleid-main: #523D66;
+$kaleid-main-light: #7A6F82;
 $kaleid-air: #E5CC50;
 $kaleid-fire: #E55050;
 $kaleid-earth: #5EA63A;
@@ -29,20 +30,26 @@ $kaleid-water: #3AA6A6;
 	color: $kaleid-water;
 }
 
-// custom button colors
+// custom button colors for wave effects
 .waves-effect.waves-air {
+	border: 1px solid $kaleid-main;
+	box-shadow: 0px 3px 5px 0px rgba(0,0,0,0.50);
+	border-radius: 20px;
 	background-color: #E7CE50;
 }
 
 .waves-effect.waves-fire {
+	@extend .waves-effect.waves-air;
 	background-color: #E55050;
 }
 
 .waves-effect.waves-earth {
+	@extend .waves-effect.waves-air;
 	background-color: #5EA739;
 }
 
 .waves-effect.waves-water {
+	@extend .waves-effect.waves-air;
 	background-color: #3CA6A7;
 }
 
